@@ -5,14 +5,18 @@ ActionView::Base.send(:include, Socky::Helper)
 
 ActionView::Helpers::AssetTagHelper.register_javascript_expansion :socky => ['socky/swfobject', 'socky/FABridge', 'socky/web_socket', 'socky/json2', 'socky']
 
-ActionController::Base.class_eval do
-  alias_method :render_without_socky, :render
-  include Socky::RenderExtension
-  alias_method :render, :render_with_socky
-end
+if Rails::VERSION::MAJOR == 2
+  require File.dirname(__FILE__) + '/lib/socky/render_extension'
 
-ActionView::Base.class_eval do
-  alias_method :render_without_socky, :render
-  include Socky::RenderExtension
-  alias_method :render, :render_with_socky
+  ActionController::Base.class_eval do
+    alias_method :render_without_socky, :render
+    include Socky::RenderExtension
+    alias_method :render, :render_with_socky
+  end
+
+  ActionView::Base.class_eval do
+    alias_method :render_without_socky, :render
+    include Socky::RenderExtension
+    alias_method :render, :render_with_socky
+  end
 end
